# RockPaperScissors

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build_and_run_linux.sh  conanfile.txt  run_linux.sh  run_windows.bat
docs/: Class.md  Usecase.md  class.md  usecase.md
docs/sequence/: connect_to_room.md  determine_winner.md  force_player_turn.md  hanle_player_turn.md  registrate_player.md  show_play_table.md  start_game.md  start_turn.md
profiles/: linux.clang.debug  linux.clang.release  linux.gcc.debug  windows.msvc.debug  windows.msvc.release
src/: CMakeLists.txt  Main.cpp
src/domain/: CMakeLists.txt
src/domain/entity/: Mode.hpp
src/domain/handler/: CardForced.cpp  CardForced.hpp  CardForcedNominatedHandler.cpp  CardForcedNominatedHandler.hpp
src/domain/handler/request/: CardForced.cpp  CardForced.hpp  CardForcedNominated.cpp  CardForcedNominated.hpp  CardRaised.cpp  CardRaised.hpp  DealMissingCard.cpp  DealMissingCard.hpp  GameResult.cpp  GameResult.hpp  GameStarted.cpp  GameStarted.hpp  NewPlayerAdded.cpp  NewPlayerAdded.hpp  RoundInfo.cpp  RoundInfo.hpp
src/domain/handler/response/: ConnectToRoom.cpp  ConnectToRoom.hpp  CreateRoom.cpp  CreateRoom.hpp  Register.cpp  Register.hpp  StartGame.cpp  StartGame.hpp
src/domain/interface/: ModeManager.hpp
src/domain/interface/usecase/: Registration.hpp  Searching.hpp  StartGame.hpp
src/domain/model/: HandOfCards.cpp  HandOfCards.hpp  Registration.cpp  Registration.hpp  Room.cpp  Room.hpp  RoomSearch.cpp  RoomSearch.hpp  RoomWait.cpp  RoomWait.hpp  Searching.cpp  Searching.hpp
src/domain/usecase/: Registration.cpp  Registration.hpp  Searching.cpp  Searching.hpp  StartGame.cpp  StartGame.hpp
src/domain/util/: Property.hpp  Util.hpp
src/infrastructure/: CMakeLists.txt  RockPaperScissors.cpp  RockPaperScissors.hpp
src/infrastructure/client/: Client.cpp  Client.hpp  TcpSocketConnection.cpp
src/infrastructure/storage/: Pixmap.cpp  Pixmap.hpp
src/infrastructure/util/: Constant.hpp  Constants.hpp
src/infrastructure/widget/: Card.hpp  GameResult.cpp  GameResult.hpp  HandOfCards.cpp  HandOfCards.hpp  MainMenu.cpp  MainMenu.hpp  MainMenuWidget.cpp  MainMenuWidget.hpp  Manager.hpp  NoSpaceLineEdit.cpp  NoSpaceLineEdit.hpp  Registration.cpp  Registration.hpp  Room.cpp  Room.hpp  RoomSearch.cpp  RoomSearch.hpp  RoomWait.cpp  RoomWait.hpp  Searching.cpp  Searching.hpp  Type.hpp
